Almost done with minor adjustments to be ready for MVP

--- a/templates/destinations.html
+++ b/templates/destinations.html
@@ -126,7 +126,7 @@
 
         function updateTripDates(startDate, endDate) {
             const csrftoken = getCookie('csrftoken');
-            fetch('/api/trip/dates/update/', {
+            fetch('/api/trip/dates/', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
